# feathermd

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.ja.md  README.md  SECURITY.md
.agents/skills/review-design-diff/: SKILL.md
.agents/skills/review-security/: SKILL.md
.agents/skills/run-feathermd/: .gitignore  SKILL.md  driver.mjs
.claude/skills/run-feathermd/: SKILL.md  driver.mjs
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security-scan.yml
.kiro/: backlog.md
.kiro/specs/about-dialog/: design.md  requirements.md  tasks.md
.kiro/specs/accessibility/: design.md  requirements.md  tasks.md
.kiro/steering/: conventions.md  product.md  structure.md
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
app/: .prettierignore  .prettierrc  README.md  components.json  eslint.config.js  package-lock.json  package.json  vite.config.js  vitest-setup.ts
app/e2e/: fixtures.mjs  smoke.mjs
app/scripts/: check-e2e-production.mjs  check-versions.sh  webview2-driver.mjs
app/src/: app.css  app.d.ts  app.html  webview2-driver.test.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: audit.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  menu.rs
app/src-tauri/src/commands/: app_state.rs  export.rs  file.rs  launch.rs  menu.rs  mod.rs  search.rs  shell_integration.rs  sources.rs  update.rs  watcher.rs  wiki.rs
app/src-tauri/src/commands/file/: dialogs.rs  external_editor.rs  persistent_trust.rs  readers.rs  safe_outline.rs  trusted_paths.rs
docs/decisions/: ADR-001-20260630-仕様駆動開発とディレクトリ構成の採用.md  ADR-002-20260630-デスクトップフレームワーク選定.md  ADR-003-20260630-フロントエンドフレームワーク選定.md  ADR-004-20260630-Markdownパーサー選定.md  ADR-005-20260630-TeXレンダラー選定.md  ADR-006-20260630-UIスタイリングと外観.md  ADR-007-20260630-UIコンポーネントライブラリ選定.md  ADR-008-20260708-Shikiハイライト対応言語を限定する.md  ADR-009-20260708-ファイルアクセスの信頼境界をRust側に置く.md  ADR-010-20260708-KaTeXをESMビルドに解決させRolldownのバンドル破壊を回避する.md
docs/releases/: v0.1.0-qa.md  v0.2.2-qa.md
samples/: markdown-compatibility.md
(+323 files in other folders)
